demux: adaptive: use vlc_url_resolve (fix #19164)